@@ -1,0 +1,7 @@
+:mod:`models.dtmmodel` -- Dynamic Topic Models (DTM) and Dynamic Influence Models (DIM)
+=======================================================================================
+
+.. automodule:: gensim.models.dtmmodel
+    :synopsis: Dynamic Topic Models
+    :members:
+    :inherited-members:
